[package]
name = "otkeep"
version = "0.1.0"
edition = "2018"
description = "Command line tools for managing out of tree scripts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crumblingstatue/OtKeep"
homepage = "https://github.com/crumblingstatue/OtKeep"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
directories = "4.0.1"
temp-dir = "0.1.11"
thiserror = "1.0.31"
paths-as-strings = "0.1.1"

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]
