[package]
name = "otkeep"
version = "0.2.0"
edition = "2024"
description = "Command line tools for managing out of tree scripts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crumblingstatue/OtKeep"
homepage = "https://github.com/crumblingstatue/OtKeep"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
temp-dir = "0.1.12"
thiserror = "2.0"
paths-as-strings = "0.1.1"
owo-colors = "4.2.0"

[dependencies.rusqlite]
version = "0.36.0"
features = ["bundled"]
